@@ -34,6 +34,7 @@ version <next>:
 - realtime filter
 - anoisesrc audio filter source
 - IVR demuxer
+- compensationdelay filter
 
 
 version 2.8:
